--- a/HotelManagement/Content/Account.css
+++ b/HotelManagement/Content/Account.css
@@ -4,3 +4,19 @@
     font-family: 'IBM Plex Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
+
+.width-60vw {
+    width: 60vw !important;
+}
+
+.width-32p {
+    width: 32% !important;
+}
+
+.row .col-md-6 {
+    padding: 0 32px;
+}
+/*
+.row .col-md-6:first-child {
+    border-right: 1px solid #ccc;
+}*/
