--- a/HotelManagement/Views/Shared/_AccountLayout.cshtml
+++ b/HotelManagement/Views/Shared/_AccountLayout.cshtml
@@ -21,8 +21,8 @@
 <body>
 
     <div class="limiter">
-        <div class="container-login100" style="background-image:url('@Url.Content("~/Assets/registration/img/bg-01.jpg")');">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+        <div class="container-login100" style="background-color: #DADAF1; ">
+            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54" style="box-shadow: -20px 20px 50px rgba(76,65,153,.3); ">
                 <form class="login100-form validate-form" method="post">
                     @RenderBody()
                 </form>
