--- a/HotelManagement/Views/Shared/_AddInfoLayout.cshtml
+++ b/HotelManagement/Views/Shared/_AddInfoLayout.cshtml
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="~/Assets/registration/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/Assets/registration/css/util.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Loader.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Account.css">
 
@@ -22,7 +23,7 @@
 
     <div class="limiter">
         <div class="container-login100" style="background-color: #DADAF1; ">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54" style="box-shadow: -20px 20px 50px rgba(76,65,153,.3); ">
+            <div class="wrap-login100  width-60vw p-l-55 p-r-55 p-t-36 p-b-54" style="box-shadow: -20px 20px 50px rgba(76,65,153,.3); ">
                 <form class="login100-form validate-form" method="post">
                     @RenderBody()
                 </form>
