--- a/HotelManagement/Areas/Admin/Views/RoomType/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Edit.cshtml
@@ -29,7 +29,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.GiaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.GiaLoaiPhong, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.GiaLoaiPhong, new { htmlAttributes = new { @class = "form-control", Value = Model.GiaLoaiPhong.ToString("0.##") } })
             @Html.ValidationMessageFor(model => model.GiaLoaiPhong, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -37,7 +37,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.SoNguoiToiDa, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.SoNguoiToiDa, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.SoNguoiToiDa, new { htmlAttributes = new { @class = "form-control", min = "1", max = "8" } })
             @Html.ValidationMessageFor(model => model.SoNguoiToiDa, "", new { @class = "text-danger" })
         </div>
     </div>
