--- a/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GiaDichVu, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GiaDichVu, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.GiaDichVu, new { htmlAttributes = new { @class = "form-control", Value = Model.GiaDichVu.ToString("0.##") } })
                 @Html.ValidationMessageFor(model => model.GiaDichVu, "", new { @class = "text-danger" })
             </div>
         </div>
