--- a/HotelManagement/Areas/Admin/Views/RoomType/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Create.cshtml
@@ -19,7 +19,7 @@
         @Html.LabelFor(model => model.MaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.MaLoaiPhong, new { htmlAttributes = new { @class = "form-control" } })
-            @*@Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })*@
+            @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
             @Html.ValidationMessage("roomTypeCode", new { @class = "text-danger" })
         </div>
     </div>
@@ -28,7 +28,7 @@
         @Html.LabelFor(model => model.TenLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TenLoaiPhong, new { htmlAttributes = new { @class = "form-control" } })
-            @*@Html.ValidationMessageFor(model => model.TenLoaiPhong, "", new { @class = "text-danger" })*@
+            @Html.ValidationMessageFor(model => model.TenLoaiPhong, "", new { @class = "text-danger" })
             @Html.ValidationMessage("roomTypeName", new { @class = "text-danger" })
         </div>
     </div>
