--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">@Html.DisplayFor(modelItem => item.MaPhong)</div>
                                 <div class="df-flex-end">
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.MaPhong.Trim() }, new { @class = "button-success-outline" })
+                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.MaPhong.Trim() }, new { @class = "button-success-outline" })*@
                                     @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() }, new { @class = "button-success" })
                                 </div>
                             </div>
