--- a/HotelManagement/Views/Shared/_Layout.cshtml
+++ b/HotelManagement/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.2/css/all.css?fbclid=IwAR2TXqBPR1BwetsIfkcLDjYfw2kuhlxqmjkGdzKaCdAd6NkAkWniljGiVB8">
-    <title>@ViewBag.Title Hotel Management</title>
+    <title> Hotel Management</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/bootstrap.min.css")
     @Styles.Render("~/Content/Style.css")
