--- a/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
@@ -55,7 +55,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ChucDanh, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.ChucDanh, new SelectList(new List<string> { "Nhân viên lễ tân", "Nhân viên phục vụ", "Nhân viên kế toán" }), null, new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.ChucDanh, new SelectList(new List<string> { "Nhân viên lễ tân", "Nhân viên kinh doanh", "Nhân viên kế toán" }), null, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChucDanh, "", new { @class = "text-danger" })
         </div>
     </div>
