--- a/HotelManagement/Views/Shared/_AddInfoLayout.cshtml
+++ b/HotelManagement/Views/Shared/_AddInfoLayout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login V4</title>
+    <title>@ViewBag.Title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
