--- a/HotelManagement/Content/StyleCustom.css
+++ b/HotelManagement/Content/StyleCustom.css
@@ -58,7 +58,21 @@ body {
     justify-content: flex-end;
     flex-direction: row;
     align-items: center;
+    padding-right: 40px;
+
 }
+
+    .site-account:hover .ul-nav {
+        display: block;
+    }
+
+    .site-account:hover .ul-nav li:hover{
+        background-color: #ddd;
+    }
+
+    .site-account li {
+        position: relative;
+    }
 
     .site-account a, span {
         font-size: 1rem;
@@ -66,6 +80,9 @@ body {
         font-weight: bold;
         font-family: Arial, Helvetica, sans-serif;
         padding-right: 16px;
+        padding-top: 4px;
+        padding-bottom: 4px;
+        cursor: pointer;
     }
 
 .room-price .price {
@@ -692,3 +709,28 @@ body {
     color: rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
+
+.ul-nav {
+    display: none;
+    position: absolute;
+    color: #000;
+    background-color: #fff;
+    padding-left: 0;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 132%;
+}
+    .ul-nav li {
+        width: 100%;
+        display: block;
+        position: relative;
+        list-style-type: none;
+        background-color: #fff;
+        left: 0;
+        padding: 12px 16px;
+        color: #000;
+    }
+    .ul-nav li a{
+        color: #000;
+    }
+
