--- a/HotelManagement/Views/Shared/_LoginPartial.cshtml
+++ b/HotelManagement/Views/Shared/_LoginPartial.cshtml
@@ -4,11 +4,16 @@
 {
     <ul class="navbar-nav navbar-right col-3 col-lg-3 site-account">
         <li>
-            <a class="nav-link">
+            <a class="nav-btn">
                 @user.KhachHang.TenKhachHang
             </a>
+            <ul class="ul-nav">
+                <li>
+                        @Html.ActionLink("Booked Rooms", "Index", "BookedRooms", new { area = "" }, new { @class = "" })
+                </li>
+                <li>@Html.ActionLink("Log Out", "LogOff", "Account")</li>
+            </ul>
         </li>
-        <li>@Html.ActionLink("Log Out", "LogOff", "Account")</li>
     </ul>
 }
 else
